hphp/test/zend/bad/ext-standard-file/bug43216.php
<?php
var_dump(stream_is_local("file://"));
?>